[project]
name = "workertimemanagerbot"
version = "0.1.0"
description = "The Telegram bot for managing workers' time"
authors = [
    {name = "pskovalev1988"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "cachetools (>=5.5.2,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
